Implemented notes add endpoint Implemented service support for notes addition Implemented alert updates endpoint Implemented alert update service support Refactored entities and data model Renamed owner to assignee
