# src/main/java/de/tum/moveii/ops/logbook/alert/model/Note.java
@@ -1,7 +1,6 @@
 package de.tum.moveii.ops.logbook.alert.model;
 
-import lombok.Builder;
-import lombok.Data;
+import lombok.*;
 
 import javax.persistence.*;
 import java.time.LocalDateTime;
@@ -10,29 +9,32 @@ import java.time.LocalDateTime;
  * Created by Constantin Costescu on 07-Feb-17.
  */
 @Entity
-@Table(name = "notes", schema = "logbook")
+@Table(name = "NOTES", schema = "LOGBOOK")
 @Data
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode(of = "noteId")
 @Builder
 public class Note {
     @Id
     @SequenceGenerator(name = "notes_noteId_seq",
             sequenceName = "notes_noteId_seq",
-            schema = "logbook",
+            schema = "LOGBOOK",
             allocationSize = 1)
     @GeneratedValue(strategy = GenerationType.SEQUENCE)
-    @Column(name = "noteId", nullable = false, updatable = false)
+    @Column(name = "NOTE_ID", nullable = false, updatable = false)
     private Long noteId;
 
-    @Column(name = "ownerId", nullable = false)
+    @Column(name = "AUTHOR_ID", nullable = false)
     private Long ownerId;
 
-    @Column(name = "message", nullable = false)
+    @Column(name = "MESSAGE", nullable = false)
     private String message;
 
-    @Column(name = "createdOn", nullable = false)
+    @Column(name = "CREATED_ON", nullable = false)
     private LocalDateTime createdOn;
 
     @ManyToOne
-    @JoinColumn(name = "alertId")
+    @JoinColumn(name = "ALERT_ID")
     private Alert alert;
 }
