# src/main/java/de/tum/moveii/ops/logbook/api/message/NoteMessage.java
@@ -1,7 +1,10 @@
 package de.tum.moveii.ops.logbook.api.message;
 
+import com.fasterxml.jackson.annotation.JsonFormat;
+import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
 import javax.validation.constraints.NotNull;
 import java.time.LocalDateTime;
@@ -10,14 +13,14 @@ import java.time.LocalDateTime;
  * Created by Alexandru Obada on 31/01/17.
  */
 @Data
+@AllArgsConstructor
+@NoArgsConstructor
 @Builder
 public class NoteMessage {
-    @NotNull
-    private Long noteId;
-    @NotNull
-    private Long owner;
+    private Long author;
     @NotNull
     private String message;
     @NotNull
+    @JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss")
     private LocalDateTime createdOn;
 }
